[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/LevelUpPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/level-up-bg.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/button-regen.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/AmaticSC-Bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/gui/button-sword-up.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/button-ranged-up.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/button-special-up.png" type="Texture" id=7]

[node name="LevelUpPopup" type="MarginContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 384.0
rect_min_size = Vector2( 256, 384 )
script = ExtResource( 1 )

[node name="Bg" type="NinePatchRect" parent="."]
margin_right = 256.0
margin_bottom = 384.0
rect_min_size = Vector2( 256, 384 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Bg"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -245.0
margin_right = -6.0

[node name="Buttons" type="VBoxContainer" parent="Bg/MarginContainer"]
margin_right = 244.0
margin_bottom = 245.0

[node name="Regen" type="MarginContainer" parent="Bg/MarginContainer/Buttons"]
margin_right = 244.0
margin_bottom = 48.0

[node name="ButtonRegen" type="TextureButton" parent="Bg/MarginContainer/Buttons/Regen"]
margin_right = 244.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )

[node name="Text" type="Label" parent="Bg/MarginContainer/Buttons/Regen"]
margin_top = 8.0
margin_right = 244.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Regenerate HP [z] / [p]"
align = 2
valign = 1

[node name="CostInfo" type="MarginContainer" parent="Bg/MarginContainer/Buttons"]
margin_top = 52.0
margin_right = 244.0
margin_bottom = 83.0

[node name="Text" type="Label" parent="Bg/MarginContainer/Buttons/CostInfo"]
margin_right = 244.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "Cost: -10% HP:"
align = 1
valign = 1

[node name="Sword" type="MarginContainer" parent="Bg/MarginContainer/Buttons"]
margin_top = 87.0
margin_right = 244.0
margin_bottom = 135.0

[node name="ButtonSword" type="TextureButton" parent="Bg/MarginContainer/Buttons/Sword"]
margin_right = 244.0
margin_bottom = 48.0
texture_normal = ExtResource( 5 )

[node name="Text" type="Label" parent="Bg/MarginContainer/Buttons/Sword"]
margin_top = 8.0
margin_right = 244.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Upgrade sword [v] / [u]"
align = 2
valign = 1

[node name="Range" type="MarginContainer" parent="Bg/MarginContainer/Buttons"]
margin_top = 139.0
margin_right = 244.0
margin_bottom = 187.0

[node name="ButtonRange" type="TextureButton" parent="Bg/MarginContainer/Buttons/Range"]
margin_right = 244.0
margin_bottom = 48.0
texture_normal = ExtResource( 6 )

[node name="Text" type="Label" parent="Bg/MarginContainer/Buttons/Range"]
margin_top = 8.0
margin_right = 244.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "upgrade spell [c] / [i]"
align = 2
valign = 1

[node name="Special" type="MarginContainer" parent="Bg/MarginContainer/Buttons"]
margin_top = 191.0
margin_right = 244.0
margin_bottom = 239.0

[node name="ButtonSpecial" type="TextureButton" parent="Bg/MarginContainer/Buttons/Special"]
margin_right = 244.0
margin_bottom = 48.0
texture_normal = ExtResource( 7 )

[node name="Text" type="Label" parent="Bg/MarginContainer/Buttons/Special"]
margin_top = 8.0
margin_right = 244.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "upgrade force field [x] / [o]"
align = 2
valign = 1

[connection signal="pressed" from="Bg/MarginContainer/Buttons/Regen/ButtonRegen" to="." method="_on_ButtonRegen_pressed"]
[connection signal="pressed" from="Bg/MarginContainer/Buttons/Sword/ButtonSword" to="." method="_on_ButtonSword_pressed"]
[connection signal="pressed" from="Bg/MarginContainer/Buttons/Range/ButtonRange" to="." method="_on_ButtonRange_pressed"]
[connection signal="pressed" from="Bg/MarginContainer/Buttons/Special/ButtonSpecial" to="." method="_on_ButtonSpecial_pressed"]
